--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
             <div class="text-center mb-16">
                 <h2 class="text-3xl md:text-4xl font-bold text-gray-900 dark:text-white mb-4">Featured <span
                         class="text-teal-500 dark:text-teal-400">Projects</span></h2>
-            <p class="text-gray-600 dark:text-gray-400">Some of my recent work.</p>
+                <p class="text-gray-600 dark:text-gray-400">Some of my recent work.</p>
             </div>
             <div id="projects-container" class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Projects injected via JS -->
@@ -618,8 +618,13 @@
                                     <i class="fas fa-handshake"></i>
                                 </div>
                                 <div>
-                                    <p class="text-xs uppercase tracking-wide text-teal-200/90">Collaboration</p>
-                                    <p class="text-sm font-semibold text-gray-900 dark:text-white">Let's build together
+                                    <p
+                                        class="text-[10px] md:text-xs uppercase tracking-normal md:tracking-wide text-teal-200/90 leading-tight">
+                                        Collaboration
+                                    </p>
+                                    <p
+                                        class="text-xs md:text-sm font-semibold text-gray-900 dark:text-white leading-snug">
+                                        Let's build together
                                     </p>
                                 </div>
                             </div>
@@ -1272,4 +1277,3 @@
 </body>
 
 </html>
-                                             
