--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                     <div class="grid grid-cols-2 gap-4 mt-6">
                         <div
                             class="bg-gradient-to-br from-teal-500/20 via-sky-500/15 to-emerald-500/20 border border-teal-400/40 rounded-2xl p-4 shadow-md">
-                            <div class="flex items-center gap-3">
+                            <div class="flex flex-col sm:flex-row items-start sm:items-center gap-2 sm:gap-3">
                                 <div
                                     class="w-10 h-10 rounded-xl bg-teal-500/80 flex items-center justify-center text-white">
                                     <i class="fas fa-handshake"></i>
@@ -629,6 +629,7 @@
                                 </div>
                             </div>
                         </div>
+
 
                         <div
                             class="bg-gradient-to-br from-indigo-500/20 via-purple-500/15 to-fuchsia-500/20 border border-purple-400/40 rounded-2xl p-4 shadow-md">
