Updated profile icon, fixed collaboration card & improved mobile styling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO Meta -->
-    <title id="page-title">Mohit Kumar | Software Engineer</title>
+    <title id="page-title">Mohit Kumar | Data Analyst Engineer</title>
     <meta name="description"
         content="Portfolio of Mohit Kumar — Software Engineer specializing in Data Analytics, Python, Business Analytics, Data Engineering, and modern web technologies." />
     <meta name="keywords"
@@ -57,7 +57,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
+   
+<script src="https://cdn.tailwindcss.com"></script>
+
+<!-- Font Awesome Icons -->
+<link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+      integrity="sha512-5oH9FYjFJ+8xL1ZVcjEQRrIAo7z9fyyu4eYF8YvX2Y73VqzHzVJHl8avM4aM4z4+YR0iURm8Nl7Yz9YQe9fW4w=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
@@ -442,17 +451,20 @@
                         src="assets/images/prophile_mohit.png" alt="Profile">
                     <div
                         class="absolute -bottom-4 -right-4 bg-white dark:bg-gray-800 p-3 rounded-xl border border-gray-200 dark:border-gray-700 shadow-xl flex items-center gap-3">
-                        <div class="bg-green-500/20 p-2 rounded-lg"><i
-                                class="fas fa-code text-green-600 dark:text-green-400"></i></div>
-                        <div>
-                            <p class="text-xs text-gray-500 dark:text-gray-400">Profile</p>
-                            <p class="text-sm font-bold text-gray-900 dark:text-white">MCA Student | Aspiring Data
-                                Analyst</p>
-
+                        <div class="bg-green-500/20 p-2 rounded-lg">
+                            <i class="fas fa-chart-line text-green-600 dark:text-green-400"></i>
                         </div>
+
+                        <p class="text-xs text-gray-500 dark:text-gray-400">Profile</p>
+                        <p class="text-sm font-bold text-gray-900 dark:text-white">
+                            Aspiring Data Analyst | MCA Student
+                        </p>
+
+
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
 
